--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
@@ -24,14 +26,28 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remove": "^0.1.5",
+    "tailwind-merge": "^1.10.0",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.0-beta.61",
+    "@storybook/addon-interactions": "^7.0.0-beta.61",
+    "@storybook/addon-links": "^7.0.0-beta.61",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/blocks": "^7.0.0-alpha.8",
+    "@storybook/nextjs": "^7.0.0-beta.61",
+    "@storybook/react": "^7.0.0-beta.61",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.21",
+    "storybook": "^7.0.0-beta.61",
+    "storybook-dark-mode": "^2.1.1",
     "tailwindcss": "^3.2.7"
   }
 }
