--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-popover": "1.0.4",
     "@stitches/react": "^1.2.8",
@@ -32,6 +31,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@radix-ui/colors": "^0.1.8",
     "@storybook/addon-essentials": "^7.0.0-beta.61",
     "@storybook/addon-interactions": "^7.0.0-beta.61",
     "@storybook/addon-links": "^7.0.0-beta.61",
@@ -46,8 +46,10 @@
     "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.21",
+    "scaffdog": "^2.5.0",
     "storybook": "^7.0.0-beta.61",
     "storybook-dark-mode": "^2.1.1",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "windy-radix-palette": "^0.5.0"
   }
 }
