--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-popover": "1.0.4",
+    "@radix-ui/react-toast": "^1.1.2",
     "@stitches/react": "^1.2.8",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
