--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-popover": "1.0.4",
     "@radix-ui/react-toast": "^1.1.2",
     "@stitches/react": "^1.2.8",
